<resources>
    <string name="app_name">Aganada</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="to_camera_button">toCameraButton</string>
    <string name="to_wordbook_button">toWordbookButton</string>
    <string name="to_test_button">toTestButton</string>
    <string name="preview">preview</string>
    <string name="undo">undo</string>
    <string name="clear_text">clear text</string>
    <string name="redo">redo</string>
    <string name="check">check</string>
    <string name="feedback_image">feedback_image</string>
</resources>