<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.aganada.test.TestFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_50"
        tools:context=".test.TestFragment">

        <ImageButton
            android:id="@+id/camera_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitXY"
            android:padding="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:contentDescription="@string/to_camera_button"
            android:src="@drawable/ic_baseline_camera_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/wordbook_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:scaleType="fitXY"
            android:padding="4dp"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:contentDescription="@string/to_wordbook_button"
            android:src="@drawable/ic_baseline_word_book_24"
            app:layout_constraintStart_toEndOf="@+id/camera_button"
            app:layout_constraintTop_toTopOf="@+id/camera_button" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.35"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintDimensionRatio="4:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >
            <ImageView
                android:id="@+id/word_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/preview" />
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/prev_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@null"
            android:contentDescription="@string/undo"
            android:padding="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            app:tint="@color/bg_700" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@null"
            android:contentDescription="@string/undo"
            android:padding="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toEndOf="@id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView"
            app:tint="@color/bg_700" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="20dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintWidth_percent="0.8">

            <com.example.aganada.views.WordView
                android:id="@+id/wordView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_wordview" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView">

            <ImageButton
                android:id="@+id/undo_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/undo"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_undo_24" />

            <ImageButton
                android:id="@+id/redo_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/redo"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_redo_24" />

            <ImageButton
                android:id="@+id/draw_mode_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@null"
                android:contentDescription="@string/clear_text"
                android:onClick="@{viewModel::onModeButtonClicked}"
                android:padding="4dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_undo_24" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/check_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@null"
            android:contentDescription="@string/check"
            android:padding="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_check_circle_outline_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>